@@ -1,3 +1,8 @@
+  17 Jul 2013; Michael Weber <xmw@gentoo.org>
+  raspberrypi-userland-bin-0_p20130711.ebuild,
+  raspberrypi-userland-bin-1_pre20130715.ebuild:
+  Update ebuilds
+
 *raspberrypi-userland-bin-0_p20130711 (17 Jul 2013)
 *raspberrypi-userland-bin-1_pre20130715 (17 Jul 2013)
 
